# docs/swagger.json
@@ -222,7 +222,7 @@
                     "200": {
                         "description": "用户列表数据，包含总数和分页记录",
                         "schema": {
-                            "$ref": "#/definitions/controllers.UserListResponse"
+                            "$ref": "#/definitions/validation.UserListResponseDTO"
                         }
                     },
                     "400": {
@@ -517,22 +517,6 @@
         }
     },
     "definitions": {
-        "controllers.UserListResponse": {
-            "type": "object",
-            "properties": {
-                "items": {
-                    "description": "用户列表",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/validation.UserResponseDTO"
-                    }
-                },
-                "total": {
-                    "description": "总数",
-                    "type": "integer"
-                }
-            }
-        },
         "utils.Response": {
             "type": "object",
             "properties": {
@@ -609,6 +593,22 @@
                     "type": "string",
                     "maxLength": 32,
                     "minLength": 3
+                }
+            }
+        },
+        "validation.UserListResponseDTO": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "description": "用户列表",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/validation.UserResponseDTO"
+                    }
+                },
+                "total": {
+                    "description": "总数",
+                    "type": "integer"
                 }
             }
         },
